# Interview_Scheduling_Chatbot

backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: availability_agent.py  cancellation_agent.py  conversation_agent.py  intent_agent.py  reschedule_agent.py  scheduling_agent.py
backend/app/auth/: jwt_handler.py  password.py
backend/app/db/: mongo.py
backend/app/graph/: langgraph_flow.py  state.py
backend/app/llm/: llm_extractor.py
backend/app/models/: schemas.py
backend/app/routes/: auth_routes.py  chat_routes.py
backend/app/tools/: calendar_tools.py  memory_tool.py  notification_tool.py  timezone_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.js  chat.js  client.js
frontend/src/components/chat/: ChatInput.jsx  MessageBubble.jsx  MessageList.jsx  TypingIndicator.jsx
frontend/src/components/layout/: CalendarView.jsx  FloatingLines.jsx  LineWaves.jsx  Navbar.jsx  Sidebar.jsx  Statusbar.jsx  Timeline.jsx  ToolInspector.jsx  Topbar.jsx
frontend/src/components/ui/: Badge.jsx  Spinner.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useChat.js
frontend/src/pages/: ChatPage.jsx  LandingPage.jsx  LoginPage.jsx
frontend/src/utils/: agentMeta.js
